--- a/templates/test.html
+++ b/templates/test.html
@@ -4,7 +4,6 @@
 
     <body>
         <h1>This is a Header</h1>
-        <p>this is a paragraph</p>
-        <p>this is second para</p>
+        <p>This is a paragraph</p>
     </body>
 </html>
